<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:hint="@string/carparkSearch"
        android:inputType="textCapCharacters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonShowAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/btnShowAll" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:text="@string/buttonSearch"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line1"
        android:textStyle="bold"
        android:textColor="#0000FF"/>

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:textStyle="bold"
        android:textColor="#0000FF"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line2"
        android:textStyle="bold"
        android:textColor="#0000FF"/>

    <ListView
        android:id="@+id/lvCarpark"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
